--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.20.2",
     "cheerio": "^1.1.2",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^4.18.2",
     "iyzipay": "^2.0.64",
     "mysql2": "^3.6.0",
